fix: app height not responsive to shorter mobile screens + remove todos

--- a/src/components/form/Form.scss
+++ b/src/components/form/Form.scss
@@ -1,6 +1,6 @@
 main {
-  position: absolute;
-  inset: 0;
+  grid-area: 1 / 1 / -1 / -1;
+  z-index: 1;
 
   > .form {
     margin-inline: 16px;
